--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validation": "^3.0.5",
     "form-data": "^3.0.0",
     "moment": "^2.27.0",
+    "mongoose": "^5.9.25",
     "mp3-cutter": "^1.0.6",
     "nodemon": "^2.0.4",
     "puppeteer": "^5.1.0"
