--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Find songs by youtube video link",
   "main": "./src/server/app.js",
   "scripts": {
-    "start": "node ./src/server/app.js",
-    "dev": "nodemon app.js"
+    "dev": "node ./src/server/app.js",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "Fl4d1t",
